feat: add frontend backend integration

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "frontend",
+  "name": "personalproject",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "vercel-build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "cd frontend && pnpm run build && cd .. && cp -r frontend/dist public",
+    "dev:backend": "cd backend && pnpm run dev",
+    "dev:frontend": "cd frontend && pnpm run dev"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
