--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-# Dependencies
 node_modules/
 */node_modules/
 frontend/node_modules/
 backend/node_modules/
 
-# Package manager lock files (keep pnpm-lock.yaml but ignore others if not used)
 package-lock.json
 yarn.lock
-
-# Environment variables
 .env
 .env.local
 .env.development
@@ -18,7 +14,6 @@ yarn.lock
 backend/.env
 frontend/.env
 
-# Build outputs
 dist/
 build/
 */dist/
@@ -26,7 +21,6 @@ build/
 frontend/dist/
 backend/dist/
 
-# Logs
 logs/
 *.log
 npm-debug.log*
@@ -35,7 +29,6 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea/
@@ -46,34 +39,28 @@ lerna-debug.log*
 *.sw?
 .DS_Store
 */.DS_Store
-
-# OS files
 Thumbs.db
 .DS_Store
 
-# Testing
 coverage/
 .nyc_output/
 *.lcov
 
-# Temporary files
 *.tmp
 *.temp
 .cache/
 .temp/
 
-# Database
 *.db
 *.sqlite
 *.sqlite3
 pgdata/
 postgres-data/
 
-# JWT secrets and certificates
 *.pem
 *.key
 *.cert
 
-# Misc
 .eslintcache
 *.tsbuildinfo
+.vercel
